--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </header>
     <main></main>
     <footer></footer>
+    <script src="https://unpkg.com/three@0.146.0/build/three.min.js"></script>
     <script src="js/test.js"></script>
 </body>
