--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <!-- three.jsを読み込む -->
+  <script src="three.js"></script>
+  <!-- index.jsを読み込む -->
+  <script src="index.js"></script>
+</head>
 <body>
-    <header>
-      <title>順縁の自己紹介</title> 
-  </header>
-    <main></main>
-    <footer></footer>
-    <script src="https://unpkg.com/three@0.146.0/build/three.min.js"></script>
-    <script src="js/test.js"></script>
+  <canvas id="myCanvas"></canvas>
 </body>
+</html>
